# prosemirror-plain-text

./: README.md  pyproject.toml
exports/: pandoc_plain.txt  text.html  text_between.txt  text_content.txt  text_custom.txt  text_descendants.txt
src/prosemirror_plain_text/: document.py  main.py  schema.py
tests/: test_plain_text.py
